--- a/ThueXeMay/ThueXeMay.csproj
+++ b/ThueXeMay/ThueXeMay.csproj
@@ -155,55 +155,49 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\bike.cs">
-      <DependentUpon>DB_ThueXeMay.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\bill.cs">
-      <DependentUpon>DB_ThueXeMay.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\blog.cs">
-      <DependentUpon>DB_ThueXeMay.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\contact.cs">
-      <DependentUpon>DB_ThueXeMay.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\customer.cs">
-      <DependentUpon>DB_ThueXeMay.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\DB_ThueXeMay.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DB_ThueXeMay.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\DB_ThueXeMay.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DB_ThueXeMay.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\DB_ThueXeMay.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DB_ThueXeMay.edmx</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\employee.cs">
-      <DependentUpon>DB_ThueXeMay.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\mail.cs">
-      <DependentUpon>DB_ThueXeMay.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\price.cs">
-      <DependentUpon>DB_ThueXeMay.tt</DependentUpon>
+    <Compile Include="Models\Model1.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Model1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Model1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\rate.cs">
-      <DependentUpon>DB_ThueXeMay.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\rent.cs">
-      <DependentUpon>DB_ThueXeMay.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\sysdiagram.cs">
-      <DependentUpon>DB_ThueXeMay.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\type.cs">
-      <DependentUpon>DB_ThueXeMay.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -1959,15 +1953,15 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Models\DB_ThueXeMay.Context.tt">
+    <Content Include="Models\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>DB_ThueXeMay.edmx</DependentUpon>
-      <LastGenOutput>DB_ThueXeMay.Context.cs</LastGenOutput>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Models\DB_ThueXeMay.tt">
+    <Content Include="Models\Model1.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>DB_ThueXeMay.edmx</DependentUpon>
-      <LastGenOutput>DB_ThueXeMay.cs</LastGenOutput>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -2091,13 +2085,6 @@
     <Content Include="Content\scss\bootstrap\_variables.scss" />
     <Content Include="Content\scss\style.scss" />
     <Content Include="Areas\Admin\Views\web.config" />
-    <EntityDeploy Include="Models\DB_ThueXeMay.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>DB_ThueXeMay.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\DB_ThueXeMay.edmx.diagram">
-      <DependentUpon>DB_ThueXeMay.edmx</DependentUpon>
-    </Content>
     <Content Include="Areas\Admin\Views\Shared\Layout_Admin.cshtml" />
     <Content Include="Areas\Admin\Views\Home\Index.cshtml" />
     <Content Include="Content\Admin\vendor\bootstrap\js\bootstrap.bundle.js.map" />
@@ -2273,6 +2260,13 @@
     <Content Include="Content\Admin\scss\utilities\_rotate.scss" />
     <Content Include="Content\Admin\scss\utilities\_text.scss" />
     <Content Include="Areas\Admin\Views\Auth\Login.cshtml" />
+    <EntityDeploy Include="Models\Model1.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\Model1.edmx.diagram">
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
