--- a/ThueXeMay/Web.config
+++ b/ThueXeMay/Web.config
@@ -72,6 +72,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="RENT_MOTOREntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MY_LAPTOP\DUCTAI;initial catalog=RENT_MOTOR;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="RENT_MOTOREntities" connectionString="metadata=res://*/Models.ThueXeModel.csdl|res://*/Models.ThueXeModel.ssdl|res://*/Models.ThueXeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MY_LAPTOP\DUCTAI;initial catalog=RENT_MOTOR;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
