--- a/ThueXeMay/ThueXeMay.csproj
+++ b/ThueXeMay/ThueXeMay.csproj
@@ -46,10 +46,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CKFinder, Version=2.6.0.2792, Culture=neutral, PublicKeyToken=579e7adc719a1423, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Content\Admin\ckfinder\bin\Debug\CKFinder.dll</HintPath>
-    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -150,6 +146,7 @@
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
     <Compile Include="Areas\Admin\Controllers\bikesController.cs" />
     <Compile Include="Areas\Admin\Controllers\blogsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\employeesController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\menusController.cs" />
     <Compile Include="Areas\Admin\Controllers\typesController.cs" />
@@ -164,59 +161,59 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\bike.cs">
-      <DependentUpon>ModelThueXeMay.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\bill.cs">
-      <DependentUpon>ModelThueXeMay.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\blog.cs">
-      <DependentUpon>ModelThueXeMay.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\CartItem.cs" />
     <Compile Include="Models\comment.cs">
-      <DependentUpon>ModelThueXeMay.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\contact.cs">
-      <DependentUpon>ModelThueXeMay.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\employee.cs">
-      <DependentUpon>ModelThueXeMay.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\mail.cs">
-      <DependentUpon>ModelThueXeMay.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\menu.cs">
-      <DependentUpon>ModelThueXeMay.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\ModelThueXeMay.Context.cs">
+    <Compile Include="Models\ModelDBThueXeMay.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ModelThueXeMay.Context.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\ModelThueXeMay.cs">
+    <Compile Include="Models\ModelDBThueXeMay.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ModelThueXeMay.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\ModelThueXeMay.Designer.cs">
+    <Compile Include="Models\ModelDBThueXeMay.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ModelThueXeMay.edmx</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\rate.cs">
-      <DependentUpon>ModelThueXeMay.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\rent.cs">
-      <DependentUpon>ModelThueXeMay.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\rentDetail.cs">
-      <DependentUpon>ModelThueXeMay.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\sysdiagram.cs">
-      <DependentUpon>ModelThueXeMay.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\type.cs">
-      <DependentUpon>ModelThueXeMay.tt</DependentUpon>
+      <DependentUpon>ModelDBThueXeMay.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -1974,15 +1971,15 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Models\ModelThueXeMay.Context.tt">
+    <Content Include="Models\ModelDBThueXeMay.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ModelThueXeMay.edmx</DependentUpon>
-      <LastGenOutput>ModelThueXeMay.Context.cs</LastGenOutput>
+      <DependentUpon>ModelDBThueXeMay.edmx</DependentUpon>
+      <LastGenOutput>ModelDBThueXeMay.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Models\ModelThueXeMay.tt">
+    <Content Include="Models\ModelDBThueXeMay.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ModelThueXeMay.edmx</DependentUpon>
-      <LastGenOutput>ModelThueXeMay.cs</LastGenOutput>
+      <DependentUpon>ModelDBThueXeMay.edmx</DependentUpon>
+      <LastGenOutput>ModelDBThueXeMay.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -2293,13 +2290,6 @@
     <Content Include="Areas\Admin\Views\Home\ContactAdmin.cshtml" />
     <Content Include="Areas\Admin\Views\View.cshtml" />
     <Content Include="Areas\Admin\Views\Home\EditContact.cshtml" />
-    <EntityDeploy Include="Models\ModelThueXeMay.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>ModelThueXeMay.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\ModelThueXeMay.edmx.diagram">
-      <DependentUpon>ModelThueXeMay.edmx</DependentUpon>
-    </Content>
     <Content Include="Areas\Admin\Views\blogs\Create.cshtml" />
     <Content Include="Areas\Admin\Views\blogs\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\blogs\Index.cshtml" />
@@ -2307,6 +2297,15 @@
     <Content Include="Areas\Admin\Views\menus\Create.cshtml" />
     <Content Include="Areas\Admin\Views\menus\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\menus\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\employees\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\employees\Index.cshtml" />
+    <EntityDeploy Include="Models\ModelDBThueXeMay.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ModelDBThueXeMay.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\ModelDBThueXeMay.edmx.diagram">
+      <DependentUpon>ModelDBThueXeMay.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -2329,8 +2328,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\About\Index.cshtml" />
     <Content Include="Views\Pricing\Index.cshtml" />
@@ -2347,6 +2344,8 @@
     <Content Include="Views\Blog\Comment.cshtml" />
     <Content Include="Views\Cart\Index.cshtml" />
     <Content Include="Views\Home\Menu.cshtml" />
+    <Content Include="Views\Cart\Checkout.cshtml" />
+    <Content Include="Views\Cart\RentSuccess.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
