--- a/ThueXeMay/Web.config
+++ b/ThueXeMay/Web.config
@@ -23,7 +23,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
-	  <globalization fileEncoding="utf-8" />
+    <globalization fileEncoding="utf-8" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -72,4 +72,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="RENT_MOTOREntities" connectionString="metadata=res://*/Models.ModelThueXeMay.csdl|res://*/Models.ModelThueXeMay.ssdl|res://*/Models.ModelThueXeMay.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MY_LAPTOP\DUCTAI;initial catalog=RENT_MOTOR;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="RENT_MOTOREntities" connectionString="metadata=res://*/Models.ModelDBThueXeMay.csdl|res://*/Models.ModelDBThueXeMay.ssdl|res://*/Models.ModelDBThueXeMay.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MY_LAPTOP\DUCTAI;initial catalog=RENT_MOTOR;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
