--- a/ThueXeMay/Web.config
+++ b/ThueXeMay/Web.config
@@ -72,7 +72,6 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="RENT_MOTOREntities" connectionString="metadata=res://*/Models.ModelDBThueXeMay.csdl|res://*/Models.ModelDBThueXeMay.ssdl|res://*/Models.ModelDBThueXeMay.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MY_LAPTOP\DUCTAI;initial catalog=RENT_MOTOR;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  
+<connectionStrings><add name="RENT_MOTOREntities" connectionString="metadata=res://*/Models.ModelThueXeMay.csdl|res://*/Models.ModelThueXeMay.ssdl|res://*/Models.ModelThueXeMay.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MY_LAPTOP\DUCTAI;initial catalog=RENT_MOTOR;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
